--- a/src/Pages/global.css
+++ b/src/Pages/global.css
@@ -16,7 +16,7 @@
     justify-content: center;
     align-items: center;
     padding: 0;
-    margin: 40px auto 20px;
+    /* margin: 40px auto 20px; */
     margin-top: 0;
     text-align: center;
 }
@@ -92,11 +92,7 @@ h2 {
 
 section {
     background-color: #eee;
-    height: calc(100vh - 200px);
-
-    @media(max-width: 700px) {
-        height: calc(100vh + 100px);
-    }
+    height: 100%;
 }
 
 .button-27 {
